envio do survey com hash.